fixed: overflow & scroll on post details page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,3 +56,7 @@
 .md-style a {
     color: #2f81f7;
 }
+
+.md-style pre {
+  overflow-x: auto;
+}
